--- a/index.html
+++ b/index.html
@@ -8,59 +8,59 @@
   <meta name="description" content="Existing families: generate a polished, social‑media‑ready caption about your child and their Code Ninjas program. Includes quick Copy and Facebook Share." />
   <style>
     :root{ --bg1:#0ea5e9; --bg2:#2563eb; --card:#ffffff; --ink:#0f172a; --muted:#64748b; --brand:#2563eb; --accent:#22d3ee; --border:#e5e7eb; --radius:16px; --shadow:0 12px 30px rgba(2,6,23,.18), 0 2px 8px rgba(2,6,23,.08); }
-    *{box-sizing:border-box}
-    html,body{margin:0;height:100%;background:linear-gradient(180deg,var(--bg1),var(--bg2));font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans;color:var(--ink)}
-    .wrap{min-height:100%;display:grid;place-items:start center;padding:20px}
+    *{box-sizing:border-box;}
+    html,body{margin:0;height:100%;background:linear-gradient(180deg,var(--bg1),var(--bg2));font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans;color:var(--ink);}
+    .wrap{min-height:100%;display:grid;place-items:start center;padding:20px;}
 
-    header{color:#eef6ff;text-align:center;margin-bottom:12px}
-    header .brand{display:flex;align-items:center;justify-content:center;gap:10px}
-    header img.logo{height:36px;width:auto;filter:drop-shadow(0 1px 0 rgba(0,0,0,.15))}
-    header h1{margin:6px 0 0;font-size:clamp(22px,4vw,34px)}
-    header p{margin:6px 0 0;color:#dbeafe}
+    header{color:#eef6ff;text-align:center;margin-bottom:12px;}
+    header .brand{display:flex;align-items:center;justify-content:center;gap:10px;}
+    header img.logo{height:36px;width:auto;filter:drop-shadow(0 1px 0 rgba(0,0,0,.15));}
+    header h1{margin:6px 0 0;font-size:clamp(22px,4vw,34px);}
+    header p{margin:6px 0 0;color:#dbeafe;}
 
-    .card{width:min(860px,96vw);background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:22px}
+    .card{width:min(860px,96vw);background:var(--card);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:22px;}
 
-    .hint{color:var(--muted);font-size:12px;margin:0 0 10px}
+    .hint{color:var(--muted);font-size:12px;margin:0 0 10px;}
 
-    label{font-weight:700;display:block;margin:0 0 6px}
-    input,select,textarea{width:100%;padding:12px;border:1px solid var(--border);border-radius:12px;font-size:16px}
-    textarea{min-height:180px;resize:vertical}
+    label{font-weight:700;display:block;margin:0 0 6px;}
+    input,select,textarea{width:100%;padding:12px;border:1px solid var(--border);border-radius:12px;font-size:16px;}
+    textarea{min-height:180px;resize:vertical;}
 
-    .badge{display:inline-block;background:#eef2ff;color:#334155;font-weight:800;border-radius:999px;padding:6px 10px;margin:6px 0}
+    .badge{display:inline-block;background:#eef2ff;color:#334155;font-weight:800;border-radius:999px;padding:6px 10px;margin:6px 0;}
 
-    .actions{display:flex;gap:10px;justify-content:flex-end;margin-top:14px;flex-wrap:wrap}
-    .btn{appearance:none;border:1px solid var(--border);background:#f8fafc;border-radius:12px;padding:12px 16px;cursor:pointer;font-weight:900;min-height:48px}
-    .btn.primary{background:var(--brand);border-color:var(--brand);color:#fff}
-    .btn:focus-visible{outline:3px solid color-mix(in oklab,var(--brand) 65%, white)}
-    .btn:disabled{opacity:.5;cursor:not-allowed}
+    .actions{display:flex;gap:10px;justify-content:flex-end;margin-top:14px;flex-wrap:wrap;}
+    .btn{appearance:none;border:1px solid var(--border);background:#f8fafc;border-radius:12px;padding:12px 16px;cursor:pointer;font-weight:900;min-height:48px;}
+    .btn.primary{background:var(--brand);border-color:var(--brand);color:#fff;}
+    .btn:focus-visible{outline:3px solid color-mix(in oklab,var(--brand) 65%, white);}
+    .btn:disabled{opacity:.5;cursor:not-allowed;}
 
-    .hidden{display:none !important}
+    .hidden{display:none !important;}
 
-    .fade{animation:fade .25s ease}
-    @keyframes fade{from{opacity:0;transform:translateY(4px)}to{opacity:1;transform:none}}
-    @media (prefers-reduced-motion:reduce){.fade{animation:none}}
+    .fade{animation:fade .25s ease;}
+    @keyframes fade{from{opacity:0;transform:translateY(4px);}to{opacity:1;transform:none;}}
+    @media (prefers-reduced-motion:reduce){.fade{animation:none;}}
 
-    .toast{position:fixed;left:50%;bottom:16px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:10px;box-shadow:var(--shadow);opacity:0;pointer-events:none;transition:opacity .25s ease}
-    .toast.show{opacity:1}
+    .toast{position:fixed;left:50%;bottom:16px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:10px;box-shadow:var(--shadow);opacity:0;pointer-events:none;transition:opacity .25s ease;}
+    .toast.show{opacity:1;}
 
     /* Wizard */
-    .wizard-head{display:flex;align-items:center;gap:12px;margin:8px 0 12px}
-    .progress{position:relative;height:8px;background:#eef2ff;border-radius:999px;overflow:hidden;flex:1}
-    .progress .bar{position:absolute;inset:0 100% 0 0;background:linear-gradient(90deg,var(--accent),var(--brand));transition:inset .25s ease}
-    .step{display:none}
-    .step.active{display:block}
-    .step h3{margin:0 0 8px}
+    .wizard-head{display:flex;align-items:center;gap:12px;margin:8px 0 12px;}
+    .progress{position:relative;height:8px;background:#eef2ff;border-radius:999px;overflow:hidden;flex:1;}
+    .progress .bar{position:absolute;inset:0 100% 0 0;background:linear-gradient(90deg,var(--accent),var(--brand));transition:inset .25s ease;}
+    .step{display:none;}
+    .step.active{display:block;}
+    .step h3{margin:0 0 8px;}
 
     /* Facebook button style */
-    .btn.fb{background:#1877F2;border-color:#1877F2;color:#fff}
-    .btn.fb .icon{vertical-align:-2px;margin-right:6px}
+    .btn.fb{background:#1877F2;border-color:#1877F2;color:#fff;}
+    .btn.fb .icon{vertical-align:-2px;margin-right:6px;}
 
     /* Multi-select chips */
-    .chips{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0}
-    .chip{border:1px solid var(--border);background:#f8fafc;border-radius:999px;padding:8px 12px;font-weight:700;cursor:pointer}
-    .chip[aria-pressed="true"]{background:color-mix(in oklab,var(--brand) 14%, white);border-color:var(--brand)}
+    .chips{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0;}
+    .chip{border:1px solid var(--border);background:#f8fafc;border-radius:999px;padding:8px 12px;font-weight:700;cursor:pointer;}
+    .chip[aria-pressed="true"]{background:color-mix(in oklab,var(--brand) 14%, white);border-color:var(--brand);}
 
-    @media (max-width:640px){ .wrap{padding:14px} .card{padding:14px} header img.logo{height:30px} .actions .btn.primary{flex:1 0 100%} }
+    @media (max-width:640px){ .wrap{padding:14px;} .card{padding:14px;} header img.logo{height:30px;} .actions .btn.primary{flex:1 0 100%;} }
   </style>
 </head>
 <body>
@@ -189,10 +189,10 @@
       const state = { step: 0, total: 7 };
       let genTimer = null;
 
-      function showToast(msg){ els.toast.textContent = msg; els.toast.classList.add('show'); setTimeout(() => els.toast.classList.remove('show'), 1800); }
-      function capName(s){ const t = String(s || '').trim(); if(!t) return ''; return t.split(' ').map((w) => w ? w[0].toUpperCase() + w.slice(1).toLowerCase() : '').join(' '); }
+      function showToast(msg){ els.toast.textContent = msg; els.toast.classList.add('show'); setTimeout(function(){ els.toast.classList.remove('show'); }, 1800); }
+      function capName(s){ const t = String(s || '').trim(); if(!t) return ''; return t.split(' ').map(function(w){ return w ? w[0].toUpperCase() + w.slice(1).toLowerCase() : ''; }).join(' '); }
 
-      // Bookings by location
+      // Booking links by location
       const booking = {
         'Cooper City':'https://www.codeninjas.com/fl-cooper-city/schedule-tour',
         'Weston':'https://www.codeninjas.com/fl-weston/schedule-tour',
@@ -231,7 +231,7 @@
         }
       };
 
-      // Likes (clean phrasing)
+      // Likes
       const likeOptions = [
         'friendly, helpful mentors',
         'clear, belt‑based progress',
@@ -244,7 +244,7 @@
         'kids make friends quickly'
       ];
 
-      // Program cool bits (per program)
+      // Program cool bits
       const coolByProgram = {
         JR: ['block‑based puzzles','sticker milestones','hands‑on builds','patient mentors'],
         CREATE: ['belts and gamified goals','designing and testing games','JavaScript progression','project gallery'],
@@ -259,7 +259,7 @@
         b.className = 'chip';
         b.textContent = label;
         b.setAttribute('aria-pressed','false');
-        b.addEventListener('click',function(){ const on=b.getAttribute('aria-pressed')==='true'; b.setAttribute('aria-pressed', on?'false':'true'); if(state.step===state.total-1) generate(); });
+        b.addEventListener('click', function(){ const on=b.getAttribute('aria-pressed')==='true'; b.setAttribute('aria-pressed', on?'false':'true'); if(state.step===state.total-1) generate(); });
         group.appendChild(b);
       }
 
@@ -302,7 +302,7 @@
         'Favorite moments so far: {cools}. '
       ];
 
-      // Booking call-to-action variants (8 options)
+      // Booking call‑to‑action variants (8 options)
       const calloutLines = [
         'Book a free gamebuilding session with your child today!',
         'Schedule a free gamebuilding visit — your child will love it!',
@@ -317,7 +317,8 @@
       function pick(arr){ return arr[Math.floor(Math.random()*arr.length)]; }
       function oxfordJoin(items){ const a=items.filter(Boolean); if(a.length<=1) return a.join(''); if(a.length===2) return a.join(' and '); return a.slice(0,-1).join(', ')+', and '+a[a.length-1]; }
 
-      function buildCaption({gender, name, program, dojo, likes, cools}){
+      function buildCaption(obj){
+        const gender = obj.gender; const name = obj.name; const program = obj.program; const dojo = obj.dojo; const likes = obj.likes; const cools = obj.cools;
         const p = programSnippets[program] || programSnippets.CREATE;
         const pr = pronouns(gender);
         const be = beVerb(gender);
@@ -332,7 +333,7 @@
           obj: pr.obj,
           poss: pr.poss,
           possCap: pr.possCap,
-          subjectCap: `My ${pr.noun}`,
+          subjectCap: 'My ' + pr.noun,
           verb: pick(p.verbs),
           specific: pick(p.specifics)
         };
@@ -356,9 +357,9 @@
           .replaceAll('{verb}', ctx.verb)
           .replaceAll('{specific}', ctx.specific);
 
-        let likeLine = '';
+        var likeLine = '';
         if(likes.length){ likeLine = pick(parentLines).replace('{likes}', oxfordJoin(likes)); }
-        let coolLine = '';
+        var coolLine = '';
         if(cools.length){ coolLine = pick(coolLines).replace('{cools}', oxfordJoin(cools)); }
 
         const callout = pick(calloutLines);
@@ -375,9 +376,9 @@
         if(i > total - 1) i = total - 1;
         state.step = i;
         els.steps.forEach(function(s, idx){ s.classList.toggle('active', idx === i); });
-        els.stepLabel.textContent = `Step ${i+1} of ${total}`;
+        els.stepLabel.textContent = 'Step ' + (i+1) + ' of ' + total;
         const pct = (i/(total-1))*100;
-        els.progressBar.style.insetInlineEnd = `${100 - pct}%`;
+        els.progressBar.style.insetInlineEnd = (100 - pct) + '%';
         // Manage nav per step
         els.back.disabled = (i === 0);
         els.back.textContent = (i === total - 1) ? '↺ Restart' : '◀ Back';
@@ -402,17 +403,13 @@
       }
 
       function resetForm(){
-        // Cancel any pending caption generation
         if(genTimer){ clearTimeout(genTimer); genTimer = null; }
-        // Clear inputs
         els.location.value = '';
         els.child.value = '';
         els.gender.value = '';
         els.program.value = '';
-        // Reset chips
         renderLikeChips();
         els.coolChips.innerHTML = '';
-        // Clear caption/output and disable share actions
         els.caption.value = '';
         els.copy.disabled = true;
         els.postFb.disabled = true;
@@ -424,19 +421,11 @@
       }
 
       function back(){
-        if(state.step === state.total - 1){
-          // Restart: fully clear state and go to step 1
-          resetForm();
-          setStep(0);
-          return;
-        }
-        if(state.step > 0) setStep(state.step - 1);
-      }
+        if(state.step === state.total - 1){ resetForm(); setStep(0); return; }
         if(state.step > 0) setStep(state.step - 1);
       }
 
       function generate(){
-        // Build inputs first to ensure consistency during delay
         const likes = getSelectedFrom(els.likesChips);
         const cools = getSelectedFrom(els.coolChips);
         const params = {
@@ -451,7 +440,6 @@
         els.caption.value = 'Generating caption…';
         els.copy.disabled = true;
         els.postFb.disabled = true;
-        // Clear any in‑flight timers
         if(genTimer){ clearTimeout(genTimer); }
         const delay = 200 + Math.floor(Math.random() * 401); // 200–600ms
         genTimer = setTimeout(function(){
@@ -472,7 +460,7 @@
         const t = els.caption.value.trim();
         if(!t) return;
         const bookingLink = booking[els.location.value] || 'https://www.codeninjas.com/';
-        const href = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(bookingLink)}&quote=${encodeURIComponent(t)}`;
+        const href = 'https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(bookingLink) + '&quote=' + encodeURIComponent(t);
         window.open(href,'_blank','noopener,noreferrer,width=780,height=540');
       }
 
@@ -500,9 +488,8 @@
       els.program.addEventListener('change', function(){ renderCoolChips(); if(state.step===state.total-1) generate(); });
 
       // Init chips + first step
-      renderLikeChips();
-      renderCoolChips();
-      setStep(0);
+      function init(){ renderLikeChips(); renderCoolChips(); setStep(0); }
+      init();
     })();
   </script>
 </body>
